--- a/docassemble/lmrhh/data/questions/mv.yml
+++ b/docassemble/lmrhh/data/questions/mv.yml
@@ -40,7 +40,8 @@ question: Anmeldung zur Mitgliederversammlung des LMR Hamburg 2022
 subquestion: |
   Dies ist die Anmeldung zur 44. Mitgliederversammlung des Landesmusikrates
   Hamburg e.V. in der Staatlichen Jugendmusikschule Hamburg, Aula, Mittelweg 42,
-  20148 Hamburg. Die Mitgliederversammlung findet statt am 22.11.2022 um ... Uhr.
+  20148 Hamburg. Die Mitgliederversammlung findet statt am 22.11.2022 um
+  17:30 Uhr.
 
   Mit diesem Formular teilen Sie uns mit, ob Sie an der Versammlung teilnehmen
   möchten. Auch wenn Sie nicht an der Versammlung teilnehmen, können Sie uns mit
